# Day_62_Coffee-Wiki

./: .gitignore  cafe-data.csv  main.py  pyproject.toml  variables.env
templates/: add.html  base.html  cafes.html
