[tool.poetry]
name = "day-62-coffee-wiki"
version = "0.1.0"
description = ""
authors = ["ahmad-hassan <skytheispro94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
